Fix alignment issues on sidebar

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -141,7 +141,7 @@
   margin: 0.5em;
   padding: 0.5em 0.5em;
   text-align: center;
-  width: 16vw;
+  
 
   .username {
     font-size: 1.3em;
